--- a/styles/shared/descriptions.scss
+++ b/styles/shared/descriptions.scss
@@ -1,5 +1,9 @@
 %description-12 {
     font-size: 1.2rem;
+
+    @include media('<phone') {
+        font-size: 3rem;
+    }
 }
 
 %description-14 {
@@ -9,4 +13,8 @@
 %description-16 {
     font-size: 1.6rem;
     font-weight: 300;	
+
+    @include media('<phone') {
+        font-size: 2.8rem;
+    }
 }
